# opensoar

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
deploy/: README.md
docs/: .gitignore  README.md  architecture.md  design-decisions.md  migrating-from-thehive.md  pyproject.toml  reddit-launch-drafts.md  repository-structure.md  show-hn-draft.md  zensical.toml
migrations/: env.py
scripts/: elastic_poller.py  install.sh  migrate_from_thehive.py  seed.py  seed.sh  test-helm.sh
tests/: conftest.py  test_actions.py  test_activities_api.py  test_ai.py  test_ai_dedup.py  test_ai_recommend.py  test_ai_tier2.py  test_alerts_api.py  test_anomaly_detection.py  test_auth.py  test_auto_enrichment.py  test_bootstrap_admin.py  test_correlation_ids.py  test_dashboard_api.py  test_decorators.py  test_enrichment_cache.py  test_greynoise_integration.py  test_health.py  test_incident_templates_api.py  test_incident_timeline_api.py  test_incidents_api.py  test_integration_loader.py  test_integrations_api.py  test_mentions.py  test_mentions_api.py  test_metrics.py  test_migrations.py  test_msdefender.py  test_narrow_exceptions.py  test_normalize.py  test_observables.py  test_playbooks_api.py  test_plugins.py  test_rate_limit.py  test_rbac.py  test_retention.py  test_runtime.py  test_scheduler.py  test_security_fixes.py  test_shodan_integration.py  (+9 more)
ui/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  (+3 more)
(+200 files in other folders)
